--- a/.gitignore
+++ b/.gitignore
@@ -558,3 +558,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,jetbrains+all,visualstudiocode,python,c++,jupyternotebooks,node,java
+
+data
