--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,11 @@ tensorflow-metal = "^0.7.1"
 transformers = "^4.26.1"
 pillow = "^9.4.0"
 requests = "^2.28.2"
-torch = "^1.13.1"
-torchvision = "^0.14.1"
+torch = "^2.0.0"
+torchvision = "^0.15.1"
 timm = "^0.6.12"
 matplotlib = "^3.7.1"
+nltk = "^3.8.1"
 
 [tool.poetry.group.dev.dependencies]
 jupyter-client = "7.3.2"
