--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,11 @@ readme = "README.md"
 packages = []
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.11"
+python = ">=3.8,<3.11"
 clingo = "^5.6.2"
-tensorflow-macos = "^2.11.0"
-tensorflow-metal = "^0.7.1"
+tensorflow = { version = "^2.11.0", markers = "sys_platform != 'darwin'"}
+tensorflow-macos = { version = "^2.11.0", markers = "sys_platform == 'darwin'"}
+tensorflow-metal = { version = "^0.7.1", markers = "sys_platform == 'darwin'"}
 transformers = "^4.26.1"
 pillow = "^9.4.0"
 requests = "^2.28.2"
