--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+accelerate==0.20.3
+evaluate==0.4.0
 huggingface-hub==0.13.3
 llama-cpp-python==0.1.61
 matplotlib==3.7.1
@@ -16,6 +18,7 @@ nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
 pandas==2.0.0
+protobuf==3.20.3
 requests==2.28.2
 tensorboard==2.12.1
 tensorboard-data-server==0.7.0
@@ -24,4 +27,3 @@ torch==2.0.0
 torchvision==0.15.1
 tqdm==4.65.0
 transformers==4.28.1
-
