added evaluation of answer similarity

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ timm = "^0.6.12"
 matplotlib = "^3.7.1"
 nltk = "^3.8.1"
 pandas = "^1.5.3"
+sentence-transformers = "^2.2.2"
 
 [tool.poetry.group.dev.dependencies]
 jupyter-client = "7.3.2"
